Bug 502770 - Dolphin does not restore open tabs when "Show on startup" is set to "Folders, tabs, and window state from last time"
Summary: Dolphin does not restore open tabs when "Show on startup" is set to "Folders,...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.3
Platform: Fedora RPMs Linux
: VHI normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 502773 502781 502887 502922 503001 503005 503045 503110 503123 503131 503147 503150 503166 503177 503278 503308 503339 503348 503403 503498 503507 505120 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-04-14 05:27 UTC by John Kizer
Modified: 2025-06-15 04:01 UTC (History)
33 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04.1
Sentry Crash Report:


Attachments
Dolphin forgetting open tabs (3.38 MB, video/mp4)
2025-04-14 05:27 UTC, John Kizer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Kizer 2025-04-14 05:27:51 UTC
Created attachment 180241 [details]
Dolphin forgetting open tabs

SUMMARY
After the Frameworks 6.13 update, Dolphin no longer reopens folders and tabs from the last time it was open. Instead, it opens a single tab with whatever folder is shown in the editable textbox next to the second "Show on startup" radio button.

STEPS TO REPRODUCE
1. Open Dolphin
2. Click Settings > Configure Dolphin... > Interface > Folders & Tabs
3. In the "Show on startup" section, choose "Folders, tabs, and window state from last time"
4. Click OK
5. Open multiple additional tabs in that existing Dolphin window
6. Close Dolphin
7. Open Dolphin

OBSERVED RESULT
The Dolphin window contains a single tab, with whatever folder is shown in the editable textbox next to the second "Show on startup" radio button.

EXPECTED RESULT
Dolphin reopens the tabs that were opened in step 5.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora KDE 41
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
This might belong in a Frameworks product, but I wasn't sure which one was applicable here. The issue began as soon as Frameworks 6.13.0 was installed - on the system where that upgrade was performed "online", the issue began immediately after the kf6 package updates, before any reboots.

Nothing too noticeable stuck out to me in the terminal output from dolphin:
johnkizer@g717-fedora:~$ dolphin
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
kf.kio.core.connection: Socket not connected QLocalSocket::PeerClosedError
kf.kio.core: An error occurred during write. The worker terminates now.
QThreadStorage: Thread 0x562984088010 exited after QThreadStorage 8 destroyed
QThreadStorage: Thread 0x562984088010 exited after QThreadStorage 2 destroyed
QThreadStorage: Thread 0x562984088010 exited after QThreadStorage 1 destroyed
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
QThreadStorage: Thread 0x55f29dd48b90 exited after QThreadStorage 9 destroyed
johnkizer@g717-fedora:~$ dolphin
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
qt.gui.imageio.jpeg: Not a JPEG file: starts with 0x89 0x50
QThreadStorage: Thread 0x55c3386c9b90 exited after QThreadStorage 9 destroyed
Comment 2 John Kizer 2025-04-14 15:51:30 UTC
*** Bug 502781 has been marked as a duplicate of this bug. ***
Comment 3 John Kizer 2025-04-14 18:25:38 UTC
Thanks for the lead! Just to confirm, this is also occurring on my device on a version of Dolphin (and its dependencies) built from git master.
Comment 4 John Kizer 2025-04-14 22:26:04 UTC
*** Bug 502773 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2025-04-15 21:18:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/950
Comment 6 Felix Ernst 2025-04-16 13:40:23 UTC
Git commit c0bf226aa1cc02c9bffff1ec05e07a255d8d2f6e by Felix Ernst, on behalf of Felix Ernst.
Committed on 16/04/2025 at 13:27.
Pushed by felixernst into branch 'master'.

Fix session restore

Since https://commits.kde.org/kxmlgui/8c9fb02a1d37672b26a03a9dd9e8675743deb269
KXmlGui only triggers a session restore for a window when the
session config contains a "NumberOfWindows" key with a value >= 1.
This commit adds such a key to the Dolphin session config, which
fixes the Dolphin main window restore for KXmlGui versions
containing that commit.

M  +2    -0    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/c0bf226aa1cc02c9bffff1ec05e07a255d8d2f6e
Comment 7 Felix Ernst 2025-04-16 14:01:31 UTC
Git commit 6032b78512685dc7d6cc3754d536823d428525c4 by Felix Ernst, on behalf of Felix Ernst.
Committed on 16/04/2025 at 13:50.
Pushed by felixernst into branch 'release/25.04'.

Fix session restore

Since https://commits.kde.org/kxmlgui/8c9fb02a1d37672b26a03a9dd9e8675743deb269
KXmlGui only triggers a session restore for a window when the
session config contains a "NumberOfWindows" key with a value >= 1.
This commit adds such a key to the Dolphin session config, which
fixes the Dolphin main window restore for KXmlGui versions
containing that commit.


(cherry picked from commit c0bf226aa1cc02c9bffff1ec05e07a255d8d2f6e)

Co-authored-by: Felix Ernst <felixernst@zohomail.eu>

M  +2    -0    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/6032b78512685dc7d6cc3754d536823d428525c4
Comment 8 John Kizer 2025-04-16 17:37:24 UTC
*** Bug 502887 has been marked as a duplicate of this bug. ***
Comment 9 John Kizer 2025-04-16 23:34:28 UTC
*** Bug 502887 has been marked as a duplicate of this bug. ***
Comment 10 Antonio Rojas 2025-04-18 06:04:34 UTC
*** Bug 502922 has been marked as a duplicate of this bug. ***
Comment 11 Jacek 2025-04-18 17:17:18 UTC
Was this fix was merged into 25.04? For me this issue is still present in version 25.04 with KDE Framework 6.13
OpenSuse TW with KDE repo.

Dolphin: 25.04.0
KDE Frameworks: 6.13.0
Qt: 6.9.0
openSUSE Tumbleweed (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.14.2-1-default
Comment 12 Antonio Rojas 2025-04-19 05:51:40 UTC
*** Bug 503001 has been marked as a duplicate of this bug. ***
Comment 13 Felix Ernst 2025-04-19 09:55:30 UTC
(In reply to Jacek from comment #11)
> Was this fix was merged into 25.04? For me this issue is still present in
> version 25.04 with KDE Framework 6.13

I merged it into the 25.04 immediately, but unfortunately this was already many days too late for the initial release 25.04.0. The fix is going to be released in Dolphin 25.04.1 though. I have now added this information to the "Version Fixed In" field at the top of this page.

I have not caused this bug, but I know it sucks that session restore is broken for the moment. Sorry for the inconvenience.
Comment 14 pallaswept 2025-04-19 13:58:51 UTC
For others who find their way here and would like a workaround before that fix lands:

Close dolphin first, then:
echo -e '\n[Number]\nNumberOfWindows=1\n' >> ~/.config/session/dolphin_dolphin_dolphin

Hope that helps and thanks for the fix Felix!
Comment 15 Jacek 2025-04-19 14:42:32 UTC
(In reply to pallaswept from comment #14)
> For others who find their way here and would like a workaround before that
> fix lands:
> 
> Close dolphin first, then:
> echo -e '\n[Number]\nNumberOfWindows=1\n' >>
> ~/.config/session/dolphin_dolphin_dolphin
> 
> Hope that helps and thanks for the fix Felix!

Thank You! You've saved ma sanity!
Comment 16 Antonio Rojas 2025-04-20 21:25:05 UTC
*** Bug 503045 has been marked as a duplicate of this bug. ***
Comment 17 Antonio Rojas 2025-04-21 14:11:36 UTC
*** Bug 503110 has been marked as a duplicate of this bug. ***
Comment 18 Antonio Rojas 2025-04-21 16:05:19 UTC
*** Bug 503123 has been marked as a duplicate of this bug. ***
Comment 19 Antonio Rojas 2025-04-21 19:53:33 UTC
*** Bug 503131 has been marked as a duplicate of this bug. ***
Comment 20 Ilya Bizyaev 2025-04-21 20:44:53 UTC
A slightly cleaner command:

kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group Number --key NumberOfWindows 1
Comment 21 pallaswept 2025-04-21 21:35:45 UTC
(In reply to Ilya Bizyaev from comment #20)
> A slightly cleaner command:
> 
> kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group Number --key NumberOfWindows 1

Thanks Ilya. I wasn't sure if kwriteconfig would be angry if I created an entry that wasn't legit yet.

I can't edit my post above but this is better and people should use this and not mine.
Comment 22 Antonio Rojas 2025-04-22 07:03:17 UTC
*** Bug 503147 has been marked as a duplicate of this bug. ***
Comment 23 Antonio Rojas 2025-04-22 07:04:39 UTC
*** Bug 503150 has been marked as a duplicate of this bug. ***
Comment 24 Antonio Rojas 2025-04-22 13:04:27 UTC
*** Bug 503166 has been marked as a duplicate of this bug. ***
Comment 25 Antonio Rojas 2025-04-22 15:49:30 UTC
*** Bug 503177 has been marked as a duplicate of this bug. ***
Comment 26 John Kizer 2025-04-24 18:42:07 UTC
*** Bug 503278 has been marked as a duplicate of this bug. ***
Comment 27 Antonio Rojas 2025-04-24 20:47:58 UTC
*** Bug 503308 has been marked as a duplicate of this bug. ***
Comment 28 Antonio Rojas 2025-04-25 14:35:47 UTC
*** Bug 503339 has been marked as a duplicate of this bug. ***
Comment 29 Kalzi 2025-04-25 14:47:06 UTC
I have this bug, too, but I have an older version of dolphin on Nobara OS 41. Guess I have to wait until the update? Or is there anything I can do to fix it?
Comment 30 S. Christian Collins 2025-04-25 16:05:42 UTC
(In reply to Kalzi from comment #29)
> I have this bug, too, but I have an older version of dolphin on Nobara OS
> 41. Guess I have to wait until the update? Or is there anything I can do to
> fix it?

Running the command in comment #20 above fixed it for me.
Comment 31 hong 2025-04-25 17:21:52 UTC
(In reply to S. Christian Collins from comment #30)
> (In reply to Kalzi from comment #29)
> > I have this bug, too, but I have an older version of dolphin on Nobara OS
> > 41. Guess I have to wait until the update? Or is there anything I can do to
> > fix it?
> 
> Running the command in comment #20 above fixed it for me.

thanks for the magical solution! 
hopefully it survives on next boot...
Comment 32 Kalzi 2025-04-25 17:28:29 UTC
(In reply to hong from comment #31)
> (In reply to S. Christian Collins from comment #30)
> > (In reply to Kalzi from comment #29)
> > > I have this bug, too, but I have an older version of dolphin on Nobara OS
> > > 41. Guess I have to wait until the update? Or is there anything I can do to
> > > fix it?
> > 
> > Running the command in comment #20 above fixed it for me.
> 
> thanks for the magical solution! 
> hopefully it survives on next boot...
Thank you so much for tagging me in this. It fixed it for me, too
Comment 33 Kalzi 2025-04-25 17:29:26 UTC
(In reply to S. Christian Collins from comment #30)
> (In reply to Kalzi from comment #29)
> > I have this bug, too, but I have an older version of dolphin on Nobara OS
> > 41. Guess I have to wait until the update? Or is there anything I can do to
> > fix it?
> 
> Running the command in comment #20 above fixed it for me.

It did for me, too. I appreciate you
Comment 34 Antonio Rojas 2025-04-25 17:39:00 UTC
*** Bug 503348 has been marked as a duplicate of this bug. ***
Comment 35 John Kizer 2025-04-26 02:05:15 UTC
*** Bug 503005 has been marked as a duplicate of this bug. ***
Comment 36 Antonio Rojas 2025-04-26 21:21:30 UTC
*** Bug 503403 has been marked as a duplicate of this bug. ***
Comment 37 Rafael Linux User 2025-04-28 10:04:14 UTC
(In reply to Ilya Bizyaev from comment #20)
> A slightly cleaner command:
> 
> kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group
> Number --key NumberOfWindows 1

That command "enables" again the feature. But, how to "enable" it and recover my last (about double panel tabs) session I had before this fatal upgrade?
Comment 38 pallaswept 2025-04-28 10:08:10 UTC
(In reply to Rafael Linux User from comment #37)
> That command "enables" again the feature. But, how to "enable" it and
> recover my last (about double panel tabs) session I had before this fatal
> upgrade?

Restore that file 
~/.config/session/dolphin_dolphin_dolphin
from a backup, while dolphin is not running. 

Then, run that command
kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group Number --key NumberOfWindows 1
To fix that session to work in the new version

Then when you start dolphin everything will be OK.
Comment 39 Rafael Linux User 2025-04-28 10:38:58 UTC
(In reply to pallaswept from comment #38)
> (In reply to Rafael Linux User from comment #37)
> > That command "enables" again the feature. But, how to "enable" it and
> > recover my last (about double panel tabs) session I had before this fatal
> > upgrade?
> 
> Restore that file 
> ~/.config/session/dolphin_dolphin_dolphin
> from a backup, while dolphin is not running. 
> 
> Then, run that command
> kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group
> Number --key NumberOfWindows 1
> To fix that session to work in the new version
> 
> Then when you start dolphin everything will be OK.

I'm afraid that in my case it's too late or something wasn't working properly. I have about 10 files that start with "dolphin_alotofnumbers" and one with the name you mentioned.

2.7k  May 19, 2022  dolphin_102201b31a5151000165289047800000017440023_1652960154_541677  
5.3k  Sep 1, 2022  dolphin_102201b31a5151000165881945000000018250094_1662029613_973719  
6.2k  Nov 29, 2023  dolphin_102201b31a5151000170005813200000027120011_1701245540_929119  
3.9k  Oct 20, 2021  dolphin_102401d31a5151000162911075500000020200015_1634735854_855828  
3.9k  Oct 20, 2021  dolphin_102401d31a5151000162911075500000020200015_1634739427_746436  
2.2k  Sep 29, 2021  dolphin_102401d31a5151000163030973300000027390029_1632933319_386979  
1.5k  Sep 30, 2021  dolphin_102401d31a5151000163299872200000019150011_1632999998_988546  
1.2k  Oct 26, 2021  dolphin_102401d31a5151000163482284600000041710013_1635233919_396654  
3.8k  Nov 26, 2021  dolphin_102401d31a5151000163706751000000018530038_1637935137_745601  
11k   Apr 28 12:02  dolphin_dolphin_dolphin  
11k   Apr 28 12:02  dolphin_dolphin_dolphin.backup  

However, after successfully running "kwriteconfig6 --file ~/.config/session/dolphin_dolphin_dolphin --group Number --key NumberOfWindows 1" and launching Dolphin again, my sessions (7 or 8 with two panels each) are not restored.  :(
Comment 40 Rafael Linux User 2025-04-28 19:16:03 UTC
I tried same in another just upgraded Tumbleweed, but same result. Files are there, but command apparently doesn't restore my previous-to-upgrade Dolphin session :(
Comment 41 pallaswept 2025-04-29 00:23:43 UTC
Sorry to hear it. It worked for me on Tumbleweed. I restored the file from a snapper btrfs snapshot (I snapshot /home, which is not default in TW) taken before this bug happened, and used the command above, and it worked. 

It won't work if you have dolphin open (because when you close it, it overwrites the file). I can't imagine what else could be going wrong. If it isn't working, it's maybe because the file you're restoring isn't correct. To be very specific, you need to restore the session file from before the update. On TW, that occurred on 15/04 so restore from 14/04 or earlier.  If you do the update, and open dolphin, you will break your session, and then if you run that command, it will not fix the broken session. It will only prevent a non-broken session from becoming broken after the update.

But this isn't really the place to discuss your backups, that's a bit offtopic, and every time we post here, we send an email to everyone who had the problem, and scroll the solution further up the page. I'm pretty sure that if you restore the correct file and patch it with the command given in #20 it will work. Good luck!
Comment 42 John Kizer 2025-04-29 02:51:08 UTC
*** Bug 503498 has been marked as a duplicate of this bug. ***
Comment 43 Rafael Linux User 2025-04-29 07:39:57 UTC
(In reply to pallaswept from comment #41)
> Sorry to hear it. It worked for me on Tumbleweed. I restored the file from a
> snapper btrfs snapshot (I snapshot /home, which is not default in TW) taken
> before this bug happened, and used the command above, and it worked. 
> 
> It won't work if you have dolphin open (because when you close it, it
> overwrites the file). I can't imagine what else could be going wrong. If it
> isn't working, it's maybe because the file you're restoring isn't correct.
> To be very specific, you need to restore the session file from before the
> update. On TW, that occurred on 15/04 so restore from 14/04 or earlier.  If
> you do the update, and open dolphin, you will break your session, and then
> if you run that command, it will not fix the broken session. It will only
> prevent a non-broken session from becoming broken after the update.
> 
> But this isn't really the place to discuss your backups, that's a bit
> offtopic, and every time we post here, we send an email to everyone who had
> the problem, and scroll the solution further up the page. I'm pretty sure
> that if you restore the correct file and patch it with the command given in
> #20 it will work. Good luck!

Thank you, I'll not continue then writing here. Anyway, you must know you have reason:  My mistake has been that I’m not starting from a "backup" (my data partition has no snapshots), but I really believe the data is there, in the file itself, dolphin_dolphin_dolphin because, in both cases, the size stands out compared to the other files from different dates.
Best regards
Comment 44 Filip 2025-04-29 09:37:28 UTC
*** Bug 503507 has been marked as a duplicate of this bug. ***
Comment 45 Rafael Linux User 2025-04-29 16:04:34 UTC
I’m sorry for sending another message here, but this is really the solution for all those who, like me, don’t have a backup of the contents of the ~/.config/ folder.

As I mentioned in my previous email, I found it really strange that the size of my file "dolphin_dolphin_dolphin" was much larger than the other copies, and it was very frustrating to have lost the more than 8 tabs with dual panels that I usually keep open (I manage servers). Well, determined to find out what was in that file, I discovered the simplest solution using a text editor to recover your "lost" tabs without needing backups:
1 - Close Dolphin
2 - Run "kate ~/.config/session/dolphin_dolphin_dolphin"
3 - Search (Ctrl + F) for the text "Tab Data" and go to the last line where that text appears. For example, for me, the last line containing that string was "Tab Data 9=". Take note of the number and add 1 to it. In my case, 10.
4 - Go to the beginning of the file, find the line "Tab Count=", and change the number there to the one you calculated. For me, it became "Tab Count=10".
5 - Save the file
6 - Open Dolphin and magically, all your tabs will reappear.

And now, I’ll stay quiet.
Comment 46 John Kizer 2025-06-15 04:01:09 UTC
*** Bug 505120 has been marked as a duplicate of this bug. ***